--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 { 
-  "ownerNumber": "628xxxx@s.whatsapp.net",
-  "botName": "GurbotMD",
-  "ownerName": "Lexxy Official",
+  "ownerNumber": "6282324344519@s.whatsapp.net",
+  "botName": "RilzbotMD",
+  "ownerName": "Lontong Arap",
   "sessionName": "database/session",
-  "footer": "© Gurbot MD 2022",
+  "footer": "© Whatsapp MD 2022",
   "api_lolkey": "SadTeams",
   "group":{
   "judul": "Forum Bot WhatsApp",
-  "link": "https://chat.whatsapp.com/E3zewfxrc5pKE6Rzb3BuqG"
+  "link": "https://chat.whatsapp.com/GcK8rExpyf79IUbJd7EbLr"
   }
 }
